# VoiceChange

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lisn/voicechange/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common_platform.cpp  qq_voice.cpp
app/src/main/java/com/lisn/voicechange/: MainActivity.java  VoiceUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lisn/voicechange/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
